--- a/survey.css
+++ b/survey.css
@@ -55,6 +55,7 @@ body{
 #content{
   color: white;
   margin-top: 10%;
+  text-shadow: black 0.05em 0.05em 0.1em;
 }
 
 #footer{
@@ -74,6 +75,7 @@ body{
 
 #logoutButton {
   margin-left: 75%;
+
 }
 
 form {
