--- a/css/admin.css
+++ b/css/admin.css
@@ -28,10 +28,10 @@ body{
   width: 100%;
   left: 0px;
   right: 0px;
-  margin-top: 5px;
+/*  margin-top: 5px;*/
 }
 
-#middlebar{
+/*#middlebar{
   position: absolute;
   background-color:#100b72;
   height: 70%;
@@ -40,27 +40,35 @@ body{
   right: 0px;
   z-index: -1;
   margin-top: 5px;
-}
+}*/
 
 #bottombar{
   position: absolute;
   background-color:#ff4f01;
   height: 20px;
   width: 100%;
-  margin-top:10%;
+  margin-top: 650px;
   left: 0px;
   right: 0px;
 }
 
 #content{
+  position: absolute;
+  background-color:#100b72;
   color: white;
-  margin-top: 10%;
+  margin-top: 20px;
+  padding-top: 8%;
+  left: 0px;
+  right: 0px;
+  width: 100%;
+  padding-bottom: 6%;
+
 }
 
 #footer{
   position: relative;
   width: 100%;
-  margin-top: 15%;
+  margin-top: 700px;
   color: #ff4f01;
   text-align: center;
   white-space: nowrap;
@@ -74,21 +82,23 @@ body{
 
 #logoutButton {
   margin-left: 75%;
+  margin-bottom: 5px;
 }
 
-#users-table-participate, #users-table-decline, #users-table-undecided{
+#users-table{
   width: 60%;
   margin: auto;
   border-collapse: collapse;
+  color: white;
 }
 
-#users-table-participate td, #users-table-decline td, #users-table-undecided td{
+#users-table td{
   border: 1px solid white;
   text-align:center;
   color: white;
 }
 
-#users-table-participate th, #users-table-decline th, #users-table-undecided th{
+#users-table th{
   border: 1px solid white;
   text-align:center;
   background-color: white;
@@ -96,10 +106,20 @@ body{
 }
 
 #survey-results-container{
-  width: 60%;
-  margin: auto; 
+  /*width: 60%;*/
+  margin-left: auto; 
+  margin-right: auto;
+  text-align: center;
 }
 
-#survey-results-container canvas{
-	background-color:white;
+a {
+  color: white;
 }
+
+h2 {
+  text-align: center;
+
+}
+/*#survey-results-container canvas{
+	background-color:white;
+}*/
