--- a/css/admin.css
+++ b/css/admin.css
@@ -112,6 +112,12 @@ body{
   text-align: center;
 }
 
+.legend-color{
+	display:inline-block;
+	width:20px;
+	height:15px;
+}
+
 a {
   color: white;
 }
